import java.awt.Color;
import java.awt.Dimension;
import java.awt.Font;
import java.awt.FontMetrics;
import java.awt.Graphics;
import java.awt.Toolkit;
import java.awt.event.KeyAdapter;
import java.awt.event.KeyEvent;
import java.util.ArrayList;
import java.util.Iterator;
import java.util.Random;
import javax.swing.ImageIcon;
import javax.swing.JPanel;

import behavioral.state.*;

public class Board extends JPanel implements Runnable, Commons, GameBehavior {
    private static final long serialVersionUID = 1L;
    private Dimension d;
    private ArrayList<Alien> aliens;
    private Player player;
    private Shot shot;
    private int alienX = 150;
    private int alienY = 25;
    private int direction = -1;
    private int deaths = 0;
    private boolean ingame = true;
    private boolean havewon = true;
    private final String expl = "/img/explosion.png";
    private final String alienpix = "/img/alien.png";
    private String message = "Seu planeta nos pertence agora...";
    private Thread animator;
    private AlienFactory alienFactory;
    private ShotFactory shotFactory;
    private GameRenderer renderer;
    private StateManager stateManager;

    public Board() {
        // -------------------------------------------------------------
        // DESIGN PATTERN: Adapter (Structural)
        // -------------------------------------------------------------
        // We register TAdapter, which adapts the KeyAdapter interface
        // to handle specific game key events.
        addKeyListener(new TAdapter());
        setFocusable(true);
        d = new Dimension(BOARD_WIDTH, BOARD_HEIGTH);
        setBackground(Color.black);

        // -------------------------------------------------------------
        // DESIGN PATTERN: Facade (Structural) - Usage
        // -------------------------------------------------------------
        // Using the GameRenderer facade simplifies our paint/render logic.
        renderer = new GameRenderer(this, d);

        // -------------------------------------------------------------
        // DESIGN PATTERN: State (Behavioral)
        // -------------------------------------------------------------
        // StateManager handles the transitions between game states
        // (Playing, Menu, Game Over).
        stateManager = new StateManager();
        stateManager.setState(new PlayingState(this));

        gameInit();
        setDoubleBuffered(true);
    }

    public void addNotify() {
        super.addNotify();
        gameInit();
    }

    // PATTERN: State - Implementing GameBehavior interface for state callbacks
    @Override
    public void cycle() {
        animationCycle();
    }

    @Override
    public void gameOverLogic() {
        gameOver();
    }

    public void gameInit() {
        aliens = new ArrayList<>();
        // -------------------------------------------------------------
        // DESIGN PATTERN: Prototype (Creational) - Usage
        // -------------------------------------------------------------
        // We create a single 'prototypeAlien' instance here.
        // The factory will later clone this instance to create the swarm.
        Alien prototypeAlien = new StraightAlien(alienX, alienY);

        try {
            java.net.URL imgURL = this.getClass().getResource(alienpix);
            if (imgURL != null) {
                // PATTERN: Flyweight - Image loaded once and reused via Prototype
                ImageIcon ii = new ImageIcon(imgURL);
                prototypeAlien.setImage(ii.getImage());
            }
        } catch (Exception e) {
            System.err.println("Error loading image in gameInit: " + alienpix);
        }

        // -------------------------------------------------------------
        // DESIGN PATTERN: Factory Method (Creational) - Usage
        // -------------------------------------------------------------
        // Using the factory to create alien instances.
        alienFactory = new AlienFactory(prototypeAlien);
        Shot prototypeShot = new Shot(0, 0);
        shotFactory = new ShotFactory(prototypeShot);

        for (int i = 0; i < 4; i++) {
            for (int j = 0; j < 6; j++) {
                // PATTERN: Factory & Prototype - creating copies from prototype
                Alien alien = alienFactory.createAlien(alienX + 18 * j, alienY + 18 * i);
                aliens.add(alien);
            }
        }

        player = new Player();
        shot = shotFactory.createShot(player.getX(), player.getY());
        if (animator == null || !ingame) {
            animator = new Thread(this);
            animator.start();
        }
    }

    public void drawAliens(Graphics g) {
        // PATTERN: Iterator - Iterating over alien list
        Iterator<Alien> it = aliens.iterator();
        while (it.hasNext()) {
            Alien alien = it.next();
            if (alien.isVisible()) {
                g.drawImage(alien.getImage(), alien.getX(), alien.getY(), this);
            }
            if (alien.isDying()) {
                alien.die();
            }
        }
    }

    public void drawPlayer(Graphics g) {
        if (player.isVisible()) {
            g.drawImage(player.getImage(), player.getX(), player.getY(), this);
        }
        if (player.isDying()) {
            player.die();
            havewon = false;
            ingame = false;
        }
    }

    public void drawShot(Graphics g) {
        if (shot.isVisible())
            g.drawImage(shot.getImage(), shot.getX(), shot.getY(), this);
    }

    public void drawBombing(Graphics g) {
        Iterator<Alien> i3 = aliens.iterator();
        while (i3.hasNext()) {
            Alien a = i3.next();
            Bomb b = a.getBomb();
            if (!b.isDestroyed()) {
                g.drawImage(b.getImage().getImage(), b.getX(), b.getY(), this);
            }
        }
    }

    public void paint(Graphics g) {
        super.paint(g);
        if (ingame) {
            renderer.renderGameplay(g, aliens, player, shot, expl);
            // Check if player died from bomb collision during rendering
            if (player.isDying()) {
                player.die();
                havewon = false;
                ingame = false;
            }
        }
        renderer.finishRendering(g);
    }

    public void gameOver() {
        Graphics g = this.getGraphics();
        renderer.renderGameOver(g, havewon, message);
        renderer.finishRendering(g);
    }

    public void animationCycle() {
        if (deaths == NUMBER_OF_ALIENS_TO_DESTROY) {
            ingame = false;
            message = "Parabéns! Você salvou a galáxia!";
        }
        player.act();
        if (shot.isVisible()) {
            Iterator<Alien> it = aliens.iterator();
            int shotX = shot.getX();
            int shotY = shot.getY();
            while (it.hasNext()) {
                Alien alien = it.next();
                int alienX = alien.getX();
                int alienY = alien.getY();
                if (alien.isVisible() && shot.isVisible()) {
                    if (shotX >= (alienX) && shotX <= (alienX + ALIEN_WIDTH)
                            && shotY >= (alienY)
                            && shotY <= (alienY + ALIEN_HEIGHT)) {
                        ImageIcon ii = new ImageIcon(getClass().getResource(expl));
                        alien.setImage(ii.getImage());
                        alien.setDying(true);
                        deaths++;
                        shot.die();
                    }
                }
            }
            int y = shot.getY();
            y -= 8;
            if (y < 0)
                shot.die();
            else
                shot.setY(y);
        }
        Iterator<Alien> it1 = aliens.iterator();
        while (it1.hasNext()) {
            Alien a1 = it1.next();
            int x = a1.getX();
            if (x >= BOARD_WIDTH - BORDER_RIGHT && direction != -1) {
                direction = -1;
                Iterator<Alien> i1 = aliens.iterator();
                while (i1.hasNext()) {
                    Alien a2 = i1.next();
                    a2.setY(a2.getY() + GO_DOWN);
                }
            }
            if (x <= BORDER_LEFT && direction != 1) {
                direction = 1;
                Iterator<Alien> i2 = aliens.iterator();
                while (i2.hasNext()) {
                    Alien a = i2.next();
                    a.setY(a.getY() + GO_DOWN);
                }
            }
        }
        Iterator<Alien> it = aliens.iterator();
        while (it.hasNext()) {
            Alien alien = it.next();
            if (alien.isVisible()) {
                int y = alien.getY();
                if (y > GROUND - ALIEN_HEIGHT) {
                    havewon = false;
                    ingame = false;
                    message = "Aliens estão invadindo a galáxia!";
                }
                alien.act(direction);
            }
        }
        Iterator<Alien> i3 = aliens.iterator();
        Random generator = new Random();
        while (i3.hasNext()) {
            int shot = generator.nextInt(15);
            Alien a = i3.next();
            Bomb b = a.getBomb();
            if (shot == CHANCE && a.isVisible() && b.isDestroyed()) {
                b.setDestroyed(false);
                b.setX(a.getX());
                b.setY(a.getY());
            }
            int bombX = b.getX();
            int bombY = b.getY();
            int playerX = player.getX();
            int playerY = player.getY();
            if (player.isVisible() && !b.isDestroyed()) {
                if (bombX >= (playerX) && bombX <= (playerX + PLAYER_WIDTH)
                        && bombY >= (playerY)
                        && bombY <= (playerY + PLAYER_HEIGHT)) {
                    b.explode();
                    player.setImage(ImageCache.getInstance().getImage("/img/explosion.png"));
                    player.setDying(true);
                    b.setDestroyed(true);
                }
            }
            if (!b.isDestroyed()) {
                b.setY(b.getY() + 1);
                if (b.getY() >= GROUND - BOMB_HEIGHT) {
                    b.explode();
                    b.setDestroyed(true);
                }
            }
        }
    }

    public void run() {
        long beforeTime, timeDiff, sleep;
        beforeTime = System.currentTimeMillis();

        while (ingame) {
            repaint();
            // State Pattern: Delegate input/update to StateManager
            stateManager.update();

            timeDiff = System.currentTimeMillis() - beforeTime;
            sleep = DELAY - timeDiff;
            if (sleep < 0)
                sleep = 1;
            try {
                Thread.sleep(sleep);
            } catch (InterruptedException e) {
                System.out.println("interrupted");
            }
            beforeTime = System.currentTimeMillis();
        }

        // State Pattern: Game Over
        stateManager.setState(new GameOverState(this));
        stateManager.update();
    }

    // -------------------------------------------------------------
    // DESIGN PATTERN: Adapter (Structural)
    // -------------------------------------------------------------
    // TAdapter (Target Adapter) extends the KeyAdapter class (Adapter).
    // It translates raw keyboard events into game actions.
    private class TAdapter extends KeyAdapter {
        public void keyReleased(KeyEvent e) {
            player.keyReleased(e);
        }

        public void keyPressed(KeyEvent e) {
            player.keyPressed(e);
            int x = player.getX();
            int y = player.getY();
            if (ingame) {
                int key = e.getKeyCode();
                if (key == KeyEvent.VK_SPACE) {
                    if (!shot.isVisible())
                        shot = shotFactory.createShot(x, y);
                }
            }
        }
    }
}
